src/tests/code/pass/pass_operator_combined_assignment_bit_and.u
entrypoint:~()
{
	iErrorCode:~i64{8};
	iErrorCode &= i64{8+2+1+16+32};
}
->(iErrorCode)