src/tests/code/fail/fail_mismatch_chained_assignment.u
entrypoint:~()
{
	foo:~i64{42};
	bar:~f64{1};
	baz:~i64{2};
	
	foo := bar := baz := 0;
}
->(foo)